  |              point the client is assumed to be stable. Code that
  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.4.2.90 2001/04/14 13:48:37 cyp Exp $
==========================================================================

2.8000
------

2.8015.469  new: x86: two OGR cores now.
            new: x86/win16/win32/netware: added support for the RC5 SMC core.
            new: win32: RAS profile names are now supported in the
                      "Interfaces to Watch" list.
            new: *ix: support for shell-style tilde expansion for filenames.

2.8014.468  fix: all: bad results caused by build .466.
            fix: all: packets were saved and reloaded after buffer update.
            fix: all: current packet wasn't discarded on contest closure.
            fix: all: exited without crunching with "-n 1" option.
            new: *ix: all clients for unix are inherently SMP capable, 
                      even if the OS does not have/support threads.
                      
2.8013.467  new: 68k: new, faster RC5 cores (previously only available in
                 the AmigaOS client)
            new: x86: new, faster RC5 core for the P4.
            new: ia64: new 4 pipeline ansi core, used by ia64.
            imp: all: add support for a second argument to -test/-bench, the
                 number to use.  example: 'dnetc -test rc5 8' 
            imp: some: OGR behaves more predictably on non-preemptive systems.
            new: macos: dnetc can now find its support files in the active
                 systems "Application Support" or "Preferences" folder.

2.8012.466  new: x86: most unix-ish clients now support the RC5/SMC core.
            imp: some: even faster OGR core.